--- a/src/main/resources/templates/successOfUpdate.html
+++ b/src/main/resources/templates/successOfUpdate.html
@@ -1,7 +1,5 @@
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ page contentType="text/html;charset=UTF-8" %>
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset='utf-8'/>
         <title>Список ДТП</title>
@@ -64,14 +62,13 @@
             }
         </style>
     </head>
-    <%--@elvariable id="id" type="java.lang.Integer"--%>
     <body>
         <div class="container">
             <div class="row pt-2" id="blockOfHeader">
                 <h1 id="header">Заявление успешно обновлено!</h1>
             </div>
             <section>
-                <a href="<c:url value='/'/>">Перейти к таблице с существующими правонарушениями</a>
+                <a th:href="@{/}">Перейти к таблице с существующими правонарушениями</a>
             </section>
         </div>
     </body>
