--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,8 +1,5 @@
-<%--@elvariable id="accident" type="ru.job4j.accidents.model.Accident"--%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ page contentType="text/html;charset=UTF-8" %>
 <!DOCTYPE html>
-<html lang="ru">
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset='utf-8'/>
         <title>Список ДТП</title>
@@ -16,32 +13,32 @@
                 color: #8080ab;
                 font-family: Arial, Tahoma, sans-serif;
             }
-
+    
             #blockOfHeader {
                 display: inline;
             }
-
+    
             #header {
                 margin-top: 1em;
                 margin-bottom: 0.8em;
                 text-transform: uppercase;
                 text-align: center;
             }
-
+    
             body {
                 background: rgba(44, 3, 171, 0.12);
                 display: flex;
                 flex-direction: column;
             }
-
+    
             .form-group {
                 width: 50%;
             }
-
+    
             .container {
                 max-width: 90%;
             }
-
+    
             section {
                 font-size: large;
                 display: flex;
@@ -49,65 +46,63 @@
                 align-items: center;
                 justify-content: center;
             }
-
+    
             p {
                 color: red;
                 font-size: larger;
             }
-
+    
             #buttons {
                 margin-top: 0.8em;
                 display: flex;
                 justify-content: space-between;
             }
-
+    
             #updateButton {
                 margin-right: 2em;
             }
-
+    
             input.btn {
                 background-color: #fff;
                 color: #8080ab;
                 border-color: #8080ab;
             }
-
+    
             input.btn:hover {
                 background-color: #8080ab;
             }
-
+    
         </style>
     </head>
-    <%--@elvariable id="error" type="java.lang.String"--%>
     <body>
-        <div class="container">
-            <div class="row pt-2" id="blockOfHeader">
-                <h1 id="header">Редактирование заявления</h1>
-            </div>
-            <form action="<c:url value='/update'/>" method="POST">
-                <section>
-                    <c:if test="${error != ''}">
-                        <p>
-                            <c:out value="${error}"/>
-                        </p>
-                    </c:if>
-                    <input type="hidden" name="id" value="${accident.id}"/>
-                    <div class="form-group">
-                        <label for="name">Введите Ваше ФИО: </label>
-                        <input type="text" class="form-control" id="name" name="name" value="${accident.name}"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="address">Введите адрес происшествия: </label>
-                        <input type="text" class="form-control" id="address" name="address" value="${accident.address}"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="text">Составьте описание происшествия: </label>
-                        <textarea class="form-control" id="text" name="text">${accident.text}</textarea>
-                    </div>
-                    <div id="buttons">
-                        <input id="updateButton" type="submit" name="save" class="btn btn-outline-dark" value="Обновить заявление"/>
-                    </div>
-                </section>
-            </form>
+    <div class="container">
+        <div class="row pt-2" id="blockOfHeader">
+            <h1 id="header">Редактирование заявления</h1>
         </div>
+        <!--/*@thymesVar id="accident" type="ru.job4j.accidents.model.Accident"*/-->
+        <form action="#" th:action="@{/update}" th:object="${accident}" method="POST">
+            <section>
+                <input type="hidden" name="id" th:field="*{id}"/>
+                <div class="form-group">
+                    <label for="name">Введите Ваше ФИО: </label>
+                    <input type="text" th:field="*{name}" class="form-control" id="name" name="name"/>
+                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</span>
+                </div>
+                <div class="form-group">
+                    <label for="address">Введите адрес происшествия: </label>
+                    <input type="text" th:field="*{address}" class="form-control" id="address" name="address"/>
+                    <span th:if="${#fields.hasErrors('address')}" th:errors="*{address}">Name error</span>
+                </div>
+                <div class="form-group">
+                    <label for="text">Составьте описание происшествия: </label>
+                    <textarea th:field="*{text}" class="form-control" id="text" name="text">${accident.text}</textarea>
+                    <span th:if="${#fields.hasErrors('text')}" th:errors="*{text}">Name error</span>
+                </div>
+                <div id="buttons">
+                    <input id="updateButton" type="submit" name="save" class="btn btn-outline-dark" value="Обновить заявление"/>
+                </div>
+            </section>
+        </form>
+    </div>
     </body>
 </html>
