--- a/src/main/resources/templates/checkId.html
+++ b/src/main/resources/templates/checkId.html
@@ -1,76 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
     <head>
+
         <meta charset='utf-8'/>
         <title>Список ДТП</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <style>
-            html, body {
-                height: 100%;
-                color: #8080ab;
-                font-family: Arial, Tahoma, sans-serif;
-            }
-
-            #blockOfHeader {
-                display: inline;
-            }
-
-            #header {
-                margin: 1.5em 0;
-                text-transform: uppercase;
-                text-align: center;
-            }
-
-            body {
-                background: rgba(44, 3, 171, 0.12);
-                display: flex;
-                flex-direction: column;
-            }
-
-            .container {
-                max-width: 90%;
-            }
-
-            p {
-                color: red;
-                font-size: larger;
-            }
-
-            section {
-                font-size: large;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-            }
-
-            .form-group {
-                width: 50%;
-            }
-
-            #buttons {
-                margin-top: 0.8em;
-                display: flex;
-                justify-content: space-between;
-            }
-
-            #sendId {
-                margin-left: 2em;
-            }
-
-            input.btn {
-                background-color: #fff;
-                color: #8080ab;
-                border-color: #8080ab;
-            }
-
-            input.btn:hover {
-                background-color: #8080ab;
-            }
-        </style>
+        <link rel="stylesheet" th:href="@{/styles/checkId.css}"/>
     </head>
     <body>
         <div class="container">
@@ -91,6 +29,7 @@
                         <input id="sendId" type="submit" name="save" class="btn btn-outline-dark" value="Отправить"/>
                     </div>
                 </section>
+                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
             </form>
         </div>
     </body>
