--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset='utf-8'/>
         <title>Список ДТП</title>
@@ -7,76 +7,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <style>
-            html, body {
-                height: 100%;
-                color: #8080ab;
-                font-family: Arial, Tahoma, sans-serif;
-            }
-
-            #blockOfHeader {
-                display: inline;
-            }
-
-            #header {
-                margin-top: 1em;
-                margin-bottom: 0.8em;
-                text-transform: uppercase;
-                text-align: center;
-            }
-
-            body {
-                background: rgba(44, 3, 171, 0.12);
-                display: flex;
-                flex-direction: column;
-            }
-
-            .container {
-                max-width: 90%;
-            }
-
-            p {
-                color: red;
-                font-size: larger;
-            }
-
-            span {
-                color: red;
-                font-size: small;
-            }
-
-            section {
-                font-size: large;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-            }
-
-            .form-group {
-                width: 50%;
-            }
-
-            #buttons {
-                margin-top: 0.8em;
-                display: flex;
-                justify-content: space-between;
-            }
-
-            #createButton {
-                margin-left: 2em;
-            }
-
-            input.btn {
-                background-color: #fff;
-                color: #8080ab;
-                border-color: #8080ab;
-            }
-
-            input.btn:hover {
-                background-color: #8080ab;
-            }
-        </style>
+        <link rel="stylesheet" th:href="@{/styles/create.css}"/>
     </head>
     <body>
         <div class="container">
@@ -105,6 +36,7 @@
                         <input id="createButton" type="submit" name="save" class="btn btn-outline-dark" value="Создать заявление"/>
                     </div>
                 </section>
+                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
             </form>
         </div>
     </body>
