--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,87 +7,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <style>
-            html, body {
-                height: 100%;
-                color: #fff;
-                font-family: Arial, Tahoma, sans-serif;
-            }
-
-            #blockOfHeader {
-                display: inline;
-            }
-
-            #header {
-                margin-top: 1.4em;
-                text-transform: uppercase;
-                text-align: center;
-                color: #8080ab;
-            }
-
-            body {
-                background: rgba(44, 3, 171, 0.12);
-                display: flex;
-                flex-direction: column;
-            }
-
-            .container {
-                max-width: 90%;
-            }
-
-            section {
-                margin-top: 1.5em;
-                font-size: large;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-            }
-
-            .table-bordered {
-                border: 3px solid #fff;
-                border-spacing: 0;
-                border-collapse: collapse;
-            }
-
-            th.contained {
-                background-color: #8080ab;
-            }
-
-            td.data {
-                background-color: #a09dab;
-            }
-
-            table.table-bordered tr td.data, th.contained {
-                vertical-align: middle;
-                text-align: center;
-                border: 2px solid #fff;
-            }
-
-            #buttons {
-                margin-top: 0.8em;
-                display: flex;
-                justify-content: space-between;
-            }
-
-            #createButton {
-                margin-left: 2em;
-            }
-
-            #updateButton {
-                margin-right: 2em;
-            }
-
-            input.btn {
-                background-color: #fff;
-                color: #8080ab;
-                border-color: #8080ab;
-            }
-
-            input.btn:hover {
-                background-color: #8080ab;
-            }
-        </style>
+        <link rel="stylesheet" th:href="@{/styles/index.css}"/>
     </head>
     <body>
         <div class="container">
@@ -109,12 +29,13 @@
                 </table>
             </section>
             <div id="buttons">
-                <!--/*@thymesVar id="accident" type="ru.job4j.accidents.model.Accident"*/-->
-                <form action="#" th:action="@{/create}" th:object="${accident}" method="POST">
+                <form action="#" th:action="@{/create}" method="POST">
                     <input id="createButton" type="submit" name="create" class="btn btn-outline-dark" value="Создать заявление"/>
+                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
                 </form>
-                <form action="#" th:action="@{/checkId}" th:object="${accident}" method="POST">
+                <form action="#" th:action="@{/checkId}" method="POST">
                     <input id="updateButton" type="submit" name="update" class="btn btn-outline-dark" value="Редактировать заявление"/>
+                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
                 </form>
             </div>
         </div>
