--- a/src/main/resources/templates/successOfCreation.html
+++ b/src/main/resources/templates/successOfCreation.html
@@ -8,65 +8,7 @@
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9.10.12/dist/sweetalert2.all.min.js" crossorigin="anonymous"></script>
-        <style>
-            html, body {
-                height: 100%;
-                color: #8080ab;
-                font-family: Arial, Tahoma, sans-serif;
-            }
-
-            #blockOfHeader {
-                display: inline;
-            }
-
-            #header {
-                margin-top: 1.4em;
-                text-transform: uppercase;
-                text-align: center;
-                color: #8080ab;
-            }
-
-            body {
-                background: rgba(44, 3, 171, 0.12);
-                display: flex;
-                flex-direction: column;
-            }
-
-            .container {
-                max-width: 90%;
-            }
-
-            section {
-                margin-top: 2em;
-                font-size: large;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-            }
-
-            p {
-                font-size: larger;
-                margin-bottom: 2.5rem;
-            }
-
-            a {
-                color: #8080ab;
-                border: 2px solid #8080ab;
-                padding: 5px;
-                text-decoration: none;
-                background-color: white;
-                border-radius: 8px;
-                transition: 0.4s;
-            }
-
-            a:hover {
-                background-color: #8080ab;
-                color: white;
-                border: 2px solid #8080ab;
-                text-decoration: none;
-            }
-        </style>
+        <link rel="stylesheet" th:href="@{/styles/successOfCreation.css}"/>
     </head>
     <body>
         <div class="container">
