"ModelAttribute. Создание инцидента" [#261013]

--- a/src/main/resources/static/styles/checkId.css
+++ b/src/main/resources/static/styles/checkId.css
@@ -29,6 +29,15 @@ p {
     font-size: larger;
 }
 
+span {
+    color: red;
+    font-size: small;
+    text-align: center;
+    display: block;
+    margin-top: 0.4em;
+    font-style: italic;
+}
+
 section {
     font-size: large;
     display: flex;
