--- a/src/main/resources/templates/successOfCreation.html
+++ b/src/main/resources/templates/successOfCreation.html
@@ -18,7 +18,7 @@
             <section>
                 <!--/*@thymesVar id="id" type="java.lang.Integer"*/-->
                 <p>Идентификатор Вашего заявления: <span th:text="${id}">ID</span></p>
-                <a th:href="@{/}">Перейти к таблице с существующими правонарушениями</a>
+                <a href="#" th:href="@{/}">Перейти к таблице с существующими правонарушениями</a>
             </section>
         </div>
     </body>
