--- a/src/main/resources/templates/successOfUpdate.html
+++ b/src/main/resources/templates/successOfUpdate.html
@@ -15,7 +15,7 @@
                 <h1 id="header">Заявление успешно обновлено!</h1>
             </div>
             <section>
-                <a th:href="@{/}">Перейти к таблице с существующими правонарушениями</a>
+                <a href="#" th:href="@{/}">Перейти к таблице с существующими правонарушениями</a>
             </section>
         </div>
     </body>
