--- a/src/main/resources/static/styles/create.css
+++ b/src/main/resources/static/styles/create.css
@@ -33,6 +33,10 @@ p {
 span {
     color: red;
     font-size: small;
+    text-align: center;
+    display: block;
+    margin-top: 0.4em;
+    font-style: italic;
 }
 
 section {
