--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <link rel="stylesheet" th:href="@{/styles/update.css}"/>
     </head>
     <body>
@@ -22,6 +21,14 @@
                         <label for="name">Введите Ваше ФИО: </label>
                         <input type="text" th:field="*{name}" class="form-control" id="name" name="name" th:value="${accident.name}"/>
                         <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</span>
+                    </div>
+                    <div class="form-group">
+                        <label for="types">Выберите тип правонарушения: </label>
+                        <select th:field="*{type.id}" class="form-control" id="types">
+                            <option th:value="0"> --- выберите пункт --- </option>
+                            <option th:each="variant : ${types}" th:value="${variant.id}" th:text="${variant.name}"></option>
+                        </select>
+                        <span th:if="${#fields.hasErrors('type.id')}" th:errors="*{type.id}">Type error</span>
                     </div>
                     <div class="form-group">
                         <label for="address">Введите адрес происшествия: </label>
