"Form с аргегационными объектами" [#305523]

--- a/src/main/resources/static/styles/create.css
+++ b/src/main/resources/static/styles/create.css
@@ -53,6 +53,7 @@ section {
 
 #buttons {
     margin-top: 0.8em;
+    margin-bottom: 1.1em;
     display: flex;
     justify-content: space-between;
 }
