--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -34,6 +34,10 @@ section {
     justify-content: center;
 }
 
+p {
+    margin: 0;
+}
+
 .table-bordered {
     border: 3px solid #fff;
     border-spacing: 0;
