--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -24,10 +24,17 @@
                     <div class="form-group">
                         <label for="types">Выберите тип правонарушения: </label>
                         <select th:field="*{type.id}" class="form-control" id="types">
-                            <option th:value="0"> --- выберите пункт --- </option>
+                            <option th:value="0"> --- выберите тип --- </option>
                             <option th:each="variant : ${types}" th:value="${variant.id}" th:text="${variant.name}"></option>
                         </select>
                         <span th:if="${#fields.hasErrors('type.id')}" th:errors="*{type.id}">Type error</span>
+                    </div>
+                    <div class="form-group">
+                        <label for="rules">Выберите статьи правонарушения: </label>
+                        <select th:name="ruleIds" class="form-control" id="rules"  size="3" multiple>
+                            <option th:each="variant : ${rules}" th:value="${variant.id}" th:text="${variant.name}"></option>
+                        </select>
+                        <span th:if="${error != ''}" th:text="${error}">Rule error</span>
                     </div>
                     <div class="form-group">
                         <label for="address">Введите адрес происшествия: </label>
@@ -36,7 +43,7 @@
                     </div>
                     <div class="form-group">
                         <label for="text">Составьте описание происшествия: </label>
-                        <textarea class="form-control" th:field="*{text}" id="text" rows="5" placeholder="Ввод текста..."></textarea>
+                        <textarea class="form-control" th:field="*{text}" id="text" rows="3" placeholder="Ввод текста..."></textarea>
                         <span th:if="${#fields.hasErrors('text')}" th:errors="*{text}">Text error</span>
                     </div>
                     <div id="buttons">
