--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" th:href="@{/styles/login.css}"/>
     </head>
     <style>
         html, body {
@@ -155,7 +154,7 @@
                                 <label for="login">Логин: </label>
                             </td>
                             <td>
-                                <input type="text" class="form-control" id="login"/>
+                                <input type="text" name="username" class="form-control" id="login"/>
                             </td>
                             <td rowspan="2" id="buttons">
                                 <input id="sendButton" type="submit" name="save" class="btn btn-outline-dark" value="&rarr;"/>
@@ -166,7 +165,7 @@
                                 <label for="password">Пароль: </label>
                             </td>
                             <td>
-                                <input type="password" class="form-control" id="password"/>
+                                <input type="password" name="password" class="form-control" id="password"/>
                             </td>
                         </tr>
                         <tr>
