--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -8,6 +8,81 @@
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" th:href="@{/styles/update.css}"/>
     </head>
+    <style>
+        html, body {
+            height: 100%;
+            color: #8080ab;
+            font-family: Arial, Tahoma, sans-serif;
+        }
+
+        #blockOfHeader {
+            display: inline;
+        }
+
+        #header {
+            margin-top: 1em;
+            margin-bottom: 0.8em;
+            text-transform: uppercase;
+            text-align: center;
+        }
+
+        body {
+            background: rgba(44, 3, 171, 0.12);
+            display: flex;
+            flex-direction: column;
+        }
+
+        .form-group {
+            width: 50%;
+        }
+
+        .container {
+            max-width: 90%;
+        }
+
+        section {
+            font-size: large;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        span {
+            color: red;
+            font-size: small;
+            text-align: center;
+            display: block;
+            margin-top: 0.4em;
+            font-style: italic;
+        }
+
+        p {
+            color: red;
+            font-size: larger;
+        }
+
+        #buttons {
+            margin-top: 0.8em;
+            margin-bottom: 1.1em;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        #updateButton {
+            margin-right: 2em;
+        }
+
+        input.btn {
+            background-color: #fff;
+            color: #8080ab;
+            border-color: #8080ab;
+        }
+
+        input.btn:hover {
+            background-color: #8080ab;
+        }
+    </style>
     <body>
         <div class="container">
             <div class="row pt-2" id="blockOfHeader">
